Enable signal first notif

--- a/blueprints/frigate_notification.yaml
+++ b/blueprints/frigate_notification.yaml
@@ -239,16 +239,16 @@ action:
                   image: '{{base_url}}/api/frigate/notifications/{{id}}/thumbnail.jpg?format=android' # Android
                   attachment: # iOS
                     url: '{{base_url}}/api/frigate/notifications/{{id}}/thumbnail.jpg'
-  # Signal Notification
-  # - choose:
-  #   - conditions: "{{ not not signal_service }}"
-  #     sequence:
-  #       - service: "notify.{{ signal_service }}"
-  #         data:
-  #           message: '1. A {{ label }} was detected on the {{ camera_name }} camera.'
-  #           data:
-  #             urls:
-  #               - '{{base_url}}/api/frigate/notifications/{{id}}/snapshot.jpg'
+  # Signal Notification pre event
+  - choose:
+    - conditions: "{{ not not signal_service }}"
+      sequence:
+        - service: "notify.{{ signal_service }}"
+          data:
+            message: '1. A {{ label }} was detected on the {{ camera_name }} camera.'
+            data:
+              urls:
+                - '{{base_url}}/api/frigate/notifications/{{id}}/snapshot.jpg'
   # update sent notification after event has concluded
   - repeat:
       sequence:
@@ -337,7 +337,7 @@ action:
               - service: "notify.{{ signal_service }}"
                 data:
                   message: >
-                    A {{ label }} was detected on the {{ camera_name }} camera.
+                    2. A {{ label }} was detected on the {{ camera_name }} camera.
                     {{base_url}}/api/frigate/notifications/{{id}}/{{camera}}/clip.mp4
                   data:
                     urls:
