--- a/blueprints/frigate_notification.yaml
+++ b/blueprints/frigate_notification.yaml
@@ -151,6 +151,7 @@ variables:
   camera: "{{ trigger.payload_json['after']['camera'] }}"
   camera_name: "{{ camera | replace('_', ' ') | title }}"
   object: "{{ trigger.payload_json['after']['label'] }}"
+  stationary: "{{ trigger.payload_json['stationary'] }}"
   label: "{{ object | title }}"
   entered_zones: "{{ trigger.payload_json['after']['entered_zones'] }}"
   type: "{{ trigger.payload_json['type'] }}"
@@ -173,6 +174,7 @@ variables:
   android_tv_services: "{{ android_tv_services_input | list }}"
 condition:
   - "{{ type != 'end' }}"
+  - "{{ not stationary }}"
   - "{{ not zone_only or entered_zones|length > 0 }}"
   - "{{ not zones|length or zones|select('in', entered_zones)|list|length > 0 }}"
   - "{{ not labels|length or object in labels }}"
@@ -260,9 +262,9 @@ action:
           timeout:
             minutes: 2
           continue_on_timeout: false
-        # only send on event end
+        # only send on event end or if the object stopped moving
         - condition: template
-          value_template: "{{ wait.trigger.payload_json['type'] == 'end' }}"
+          value_template: "{{ wait.trigger.payload_json['type'] == 'end' or wait.trigger.payload_json['stationary'] == true }}"
         # Send web UI notification
         - choose:
           - conditions: "{{ integrated_notification }}"  # web UI
