Fix stationary loop

--- a/blueprints/frigate_notification.yaml
+++ b/blueprints/frigate_notification.yaml
@@ -375,7 +375,7 @@ action:
                   title: Security Alert
                   message: "A {{ label }} was detected on the {{ camera_name }} camera."
                   image_url: "{{base_url}}/api/frigate/notifications/{{id}}/snapshot.jpg"
-      until: "{{ wait.trigger.payload_json['type'] == 'end' }}"
+      until: "{{ wait.trigger.payload_json['type'] == 'end' or wait.trigger.payload_json['after']['stationary'] == true }}"
   - wait_for_trigger:
     - platform: event
       event_type: mobile_app_notification_action
